# CV_Sport_Project

./: .gitignore  CMakeLists.txt  README.md  roadmap.md  visualize_model.py  yolo_export.py
EditedImages/Masks/: im10_bb.txt  im11_bb.txt  im12_bb.txt  im15_bb.txt  im3_bb.txt  im4_bb.txt  im5_bb.txt  im6_bb.txt  im7_bb.txt
Model_output/Masks/: im09_bb.txt  im13_bb.txt  im14_bb.txt  im1_bb.txt  im2_bb.txt  im8_bb.txt
OpenCV_Environment/: build_command.sh  opencv_env.def  packages.sh
dataset_manipulation/: contours_utils.py  images_annotations.txt  lv_mhp_to_yolo.py  lv_mhp_to_yolo_all_greates_poly.py  ochuman_to_yolo.py  to_yolo.py  train_test_yolo.py
headers/: fieldSegmentation.h  performances.h  playerAssignement.h  postProcessingYolo.h  sceneAnalyzer.h  yolo.h
model_utils/: yolo.slurm  yolo_env.def  yolo_export.py
models/: best.onnx  lv_mhp_all_contours.onnx
src/: fieldSegmentation.cpp  fieldSegmentation.h  main.cpp  model_inference.cpp  performances.cpp  performances.h  playerAssignement.cpp  playerAssignement.h  postProcessing.cpp  postProcessing.h  postProcessingYolo.cpp  postProcessingYolo.h  sceneAnalyzer.cpp  sceneAnalyzer.h  yolo.cpp  yolo.h
